disables pub page

--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -17,9 +17,9 @@
                 <li {% if route_name == "team" %} class="nav-item active" {% else %} class="nav-item" {% endif %} >
                     <a class="nav-link" href="{{ path('team') }}">Our Team</a>
                 </li>
-                <li {% if route_name == "pubs" %} class="nav-item active" {% else %} class="nav-item" {% endif %} >
-                    <a class="nav-link" href="{{ path('pubs') }}">Our Pubs</a>
-                </li>
+{#                <li {% if route_name == "pubs" %} class="nav-item active" {% else %} class="nav-item" {% endif %} >#}
+{#                    <a class="nav-link" href="{{ path('pubs') }}">Our Pubs</a>#}
+{#                </li>#}
                 <li {% if route_name == "jobs" %} class="nav-item active" {% else %} class="nav-item" {% endif %} >
                     <a class="nav-link" href="{{ path('jobs') }}">Jobs</a>
                 </li>
