--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark static-top nav">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
 {#            <img src="http://placehold.it/150x50?text=Logo" alt="">#}
             <h3>CLO Pubs</h3>
         </a>
